--- a/book/_config.yml
+++ b/book/_config.yml
@@ -38,10 +38,12 @@ html:
   home_page_in_navbar: true
   use_repository_button: true
   use_issues_button: true
-  extra_navbar: Powered by <a href="https://jupyterbook.org">Jupyter Book</a>  # Will be displayed underneath the left navbar.
   extra_footer: |
     <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://mattiasotgia.github.io/machine-learning-physics">Metodi di Machine Learning per la Fisica</a> by <span property="cc:attributionName">Mattia Sotgia</span> is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
 
+sphinx:
+  config:
+    html_show_copyright: false
 
 parse:
   myst_enable_extensions:  # default extensions to enable in the myst parser. See https://myst-parser.readthedocs.io/en/latest/using/syntax-optional.html
@@ -52,7 +54,6 @@ parse:
     # - html_admonition
     # - html_image
     - linkify
-    - replacements
+    # - replacements
     - smartquotes
-    - substitution
-    - tasklist
+    #- substitution
