--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,14 +26,14 @@ jobs:
       - uses: actions/checkout@v3
 
       # Install dependencies
-      - name: Set up Python 3.8
+      - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          python3 -m pip install --use-feature=2020-resolver -r requirements.txt
 
       # Build the book
       - name: Build the book
