--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
     permissions:
+      contents: write
       pages: write
       id-token: write
     steps:
@@ -42,8 +43,9 @@ jobs:
           jupyter-book build book
   
     # Deploy the book's HTML to gh-pages branch
+                    
       - name: GitHub Pages action
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3.9.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: NI-edu/_build/html
+          publish_dir: book/_build/html
