--- a/book/_config.yml
+++ b/book/_config.yml
@@ -39,6 +39,8 @@ html:
 sphinx:
   config:
     html_show_copyright: false
+  html_context:
+    default_mode: light
 
 parse:
   myst_enable_extensions:  # default extensions to enable in the myst parser. See https://myst-parser.readthedocs.io/en/latest/using/syntax-optional.html
