--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: content/intro
+root: content/index
 title: Introduzione
 parts:
 - caption: Lezioni
