--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -8,7 +8,7 @@ parts:
 - caption: Lezioni
   chapters:
   - file: content/lectures/introduction
-- caption: Approfondimenti
+# - caption: Approfondimenti
 #   chapters:
 #   - file: content/in_depth/aridaje
 - caption: Riferimenti bibliografici
